omnia timers working

--- a/frontend/src/assets/scss/default.scss
+++ b/frontend/src/assets/scss/default.scss
@@ -53,3 +53,9 @@ footer {
 .white-text {
     color: white;
 }
+
+.red-shadow {
+	text-shadow: 0 0 5px #FF0000, 0 0 1px rgb(255, 57, 133);
+	color:red
+
+}
